<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.album.AlbumActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/album_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:theme="@style/ToolbarColoredBackArrow"
        android:textSize="20sp"
        android:minHeight="48dp"
        android:elevation="4dp"
        app:titleTextAppearance="@style/TextAppearance.Vynils.Toolbar.Title"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/album_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        tools:listitem="@layout/album_item"
        android:contentDescription="@string/albumImageDescription"/>

</LinearLayout>
