...
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/fetch_albums_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/fetch_albums_label" />

        <View
...
